--- a/kafka-with-kafka-ui/docker-compose.yaml
+++ b/kafka-with-kafka-ui/docker-compose.yaml
@@ -34,6 +34,6 @@ services:
     environment:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
-      KAFKA_CLUSTERS_0_ZOOKEEPER: ""  # Desnecessário no modo KRaft
+      KAFKA_CLUSTERS_0_ZOOKEEPER: ""
     depends_on:
       - kafka
